# paxos-dojo

./: README.md  answer.html  full-paxos.md  main.hs  proof.md  server.hs  skeleton.html
proof/: proof-master.xcf
skeleton/csharp/: Paxos.sln
skeleton/csharp/Paxos/: Messenger.cs  Program.cs
skeleton/csharp/Paxos/Messages/: Accepted.cs  AcceptorReceived.cs  Promised.cs
skeleton/fsharp/: Acceptor.fs  AssemblyInfo.fs  Learner.fs  Paxos.fsproj  Paxos.sln  Program.fs  Proposer.fs  packages.config
skeleton/haskell/: main.hs  paxos-dojo-client.cabal
skeleton/javascript/: skeleton.html
skeleton/python/: skeleton.py
skeleton/ruby/: main.rb  message.rb  messenger.rb  value.rb
src/csharp/Paxos/: PaxosProposer.csproj  Program.cs
src/csharp/Paxos/Messages/: Proposed.cs
src/csharp/Paxos/Properties/: AssemblyInfo.cs
src/fsharp/Paxos/: Acceptor.fs  Learner.fs  Messeger.fs  Program.fs  Proposer.fs
src/haskell/: main.hs  paxos-dojo-client.cabal
src/javascript/: SpecRunner.html  answer.html  skeleton.html
src/javascript/spec/: paxosSpec.js
src/javascript/src/: messenger.js  paxos.js
src/python/: acceptor.py  learner.py  messenger.py  proposer.py  skeleton.py
src/ruby/: acceptor.rb  learner.rb  main.rb  messenger.rb  proposer.rb
src/server/: main.hs  paxos-dojo-server.cabal  stack.yaml
