name:                paxos-dojo-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/paxos-dojo-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable paxos-client
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , containers
    , bytestring
    , hspec
    , unix
    , optparse-applicative
    , http-types
    , http-client
    , MissingH
    , hashable
    , aeson
    , mtl
    , transformers
  default-language:    Haskell2010

