name:                paxos-dojo-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/paxos-dojo-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable server
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , bytestring
    , text
    , ansi-terminal
    , containers, random, warp, wai, http-types, time, iso8601-time
    , aeson, hashable, stm, async
    , unbounded-delays
  default-language:    Haskell2010
